--- a/content/blog/sudoku-solver/index.mdx
+++ b/content/blog/sudoku-solver/index.mdx
@@ -17,8 +17,7 @@ So I started to build it for myself. Soon I found that I need a lot of things:
   check if a cell is correct, check if all the cells are correct, and so on.
 
 For the moment I've implemented the solver, and in this post, we'll detail how it was done. If you want to test it, find a Sudoku somewhere, put the digits in and press the “Solve” button. If the Sudoku can be solved you'll see the solution:
-
-<Sudoku />
+[Sudoku Solver](https://solving-sudoku.netlify.app/)
 
 ## Inspiration
 
