--- a/content/blog/sudoku-solver/index.mdx
+++ b/content/blog/sudoku-solver/index.mdx
@@ -63,7 +63,7 @@ We this, we can now define:
 ### All squares (cells)
 
 ```JavaScript
-// 81 boars squares:  ['A1', 'A2'...., 'I8', 'I9'];
+// 81 boards squares:  ['A1', 'A2'...., 'I8', 'I9'];
 const squares = cross(rows, cols);
 ```
 
@@ -213,7 +213,7 @@ const boxRows = [['A','B','C'], ['D','E','F'], ['G','H','I']];
 const boxCols = [['1','2','3'], ['4','5','6'], ['7','8','9']];
 const digits = "123456789";
 
-// 81 boars squares:  ['A1', 'A2'...., 'I8', 'I9'];
+// 81 board squares:  ['A1', 'A2'...., 'I8', 'I9'];
 const squares = cross(rows, cols);
 
 // all colums, all rows and all 3x3 boxes
