Fix description for a lot of pages

--- a/src/content/cyberpunk-2077-glitch-effect/index.mdx
+++ b/src/content/cyberpunk-2077-glitch-effect/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: Cyberpunk 2077 glitch effect
 pubDate: 2020-12-16
-description: A deconstruction of a game effect done in CSS
+description: A deconstruction of the Cyberpunk 2077 game effect done and its CSS variant 
 keywords: ["CSS"]
 ---
 
