--- a/src/content/react-server-components/index.mdx
+++ b/src/content/react-server-components/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: React Server Components
 pubDate: 2023-05-05
-description: 
+description: React Server Components is a nice alternative to building a website, it comes with its drawbacks but also some interesting promises
 keywords: ["React", "RSC", "JavaScript"]
 ---
 
