--- a/src/content/the-picture-tag/index.mdx
+++ b/src/content/the-picture-tag/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: The <picture> tag
 pubDate: 2021-01-14
-description:
+description: When you need complete control of how an image is rendered, the Picture element is the perfect tool
 keywords: ["HTML"]
 ---
 
