--- a/src/content/eleventy-part-four/index.mdx
+++ b/src/content/eleventy-part-four/index.mdx
@@ -84,7 +84,7 @@ Here is the layout we are trying to implement, and that's why we use sizes.
 
 - On the desktop, the image is displayed on half of the screen width
 
-import { Picture } from "@astrojs/image/components";
+import { Picture } from "astro:assets";
 
 <Picture
   src={import("./halfscreen.png")}
