--- a/src/content/fixing-long-netlify-gatsby-builds/index.mdx
+++ b/src/content/fixing-long-netlify-gatsby-builds/index.mdx
@@ -40,7 +40,7 @@ info Done building in 375.343136062 sec
 
 Same thing on Netlify, `Caching HTML renderer compilation` takes most of the build time:
 
-import { Picture } from "@astrojs/image/components";
+import { Picture } from "astro:assets";
 
 <Picture
   src={import("./build_log.png")}
