--- a/src/content/how-to-automate-twitter-card-images-for-your-blog/index.mdx
+++ b/src/content/how-to-automate-twitter-card-images-for-your-blog/index.mdx
@@ -7,7 +7,7 @@ keywords: ["Twitter", "Cloudinary", "Gastby"]
 
 You work hard to create quality content. And you would like that content to stand out as it deserves. One thing that can help you with this is to create nice images that go with your content. Everytime your content is shared on Twitter, the image is there, like the cherry on the cake.
 
-import { Picture } from "@astrojs/image/components";
+import { Picture } from "astro:assets";
 
 <Picture
   src={import("./expected.png")}
