--- a/src/content/how-to-get-100-performance-score/index.mdx
+++ b/src/content/how-to-get-100-performance-score/index.mdx
@@ -21,7 +21,7 @@ Lighthouse is integrated into Chrome's Developer Tools so you can use it from th
 
 Here is the performance score of this website using web.dev:
 
-import { Picture } from "@astrojs/image/components";
+import { Picture } from "astro:assets";
 
 <Picture
   src={import("./perf.png")}
