--- a/src/content/how-to-handle-future-posts-in-gatsby/index.mdx
+++ b/src/content/how-to-handle-future-posts-in-gatsby/index.mdx
@@ -221,7 +221,7 @@ You'll see 'If ✚This Then That'.
 Click on ✚This and search for Date & Time service and set it up as you need.
 For example, I set it at 7:00 AM every day, but you can choose to build only on a specific days, e.g every Monday and Friday.
 
-import { Picture } from "@astrojs/image/components";
+import { Picture } from "astro:assets";
 
 <Picture
   src={import("./time.png")}
