--- a/src/content/how-to-make-a-code-editor-with-codemirror6/index.mdx
+++ b/src/content/how-to-make-a-code-editor-with-codemirror6/index.mdx
@@ -145,7 +145,7 @@ And this will generate the `editor.bundle.js` file.
 
 Open `index.html` in a browser and you'll see a single line of the editor:
 
-import { Picture } from "@astrojs/image/components";
+import { Picture } from "astro:assets";
 
 <Picture
   src={import("./codemirror6.png")}
