--- a/src/content/how-to-make-an-npm-package/index.mdx
+++ b/src/content/how-to-make-an-npm-package/index.mdx
@@ -328,7 +328,7 @@ If there are no errors your new package will be published.
 
 If you are using Github, you might use the Github Actions:
 
-import { Picture } from "@astrojs/image/components";
+import { Picture } from "astro:assets";
 
 <Picture
   src={import("./github-actions.png")}
