--- a/src/content/how-to-reduce-website-https-requests-for-images/index.mdx
+++ b/src/content/how-to-reduce-website-https-requests-for-images/index.mdx
@@ -60,7 +60,7 @@ Now all your social media icons are in one file. If you embed the SVG inside the
 
 ## CSS sprites
 
-import { Picture } from "@astrojs/image/components";
+import { Picture } from "astro:assets";
 
 <Picture
   src={import("./icon-sprite.jpg")}
