--- a/src/content/javascript-part-one/index.mdx
+++ b/src/content/javascript-part-one/index.mdx
@@ -93,7 +93,7 @@ JavaScript is not so powerful and can't do so much damage as others. But it is m
 
 If you want to master JavaScript you'll have to become a Samurai. [You'll have to master the katana and be careful not to break it or cut yourself with it.](https://www.amazon.com/Secrets-JavaScript-Ninja-John-Resig/dp/1617292850)
 
-import { Picture } from "@astrojs/image/components";
+import { Picture } from "astro:assets";
 
 <Picture
   src={import("./katana.jpeg")}
