--- a/src/content/javascript-part-two/index.mdx
+++ b/src/content/javascript-part-two/index.mdx
@@ -57,7 +57,7 @@ The most relevant line for us is `<script src="tutorial.js"></script>` which loa
 Now open `index.html` with a browser. You'll see an empty page, that is fine.
 To see the "Hello, World!" text, you need to open the browser's JavaScript console. How you do this depends on the browser, but here are some examples:
 
-import { Picture } from "@astrojs/image/components";
+import { Picture } from "astro:assets";
 
 #### Chrome
 
