--- a/src/content/react-playground/index.mdx
+++ b/src/content/react-playground/index.mdx
@@ -12,7 +12,7 @@ The playground has two parts:
 
 On the left, we have the editor and on the right, we have the sandbox iframe. Each time the code is changed, the sandbox evaluates the code again.
 
-import { Picture } from "@astrojs/image/components";
+import { Picture } from "astro:assets";
 
 <Picture
   src={import("./react-playground.png")}
