--- a/src/content/short-introduction-to-xstate/index.mdx
+++ b/src/content/short-introduction-to-xstate/index.mdx
@@ -24,7 +24,7 @@ So it's pretty obvious that in some cases at least, we need solid state manageme
 
 If we were to model a finite state machine for a car, among the possible states is "accelerating" and "decelerating", but the machine can be only in one of the states at a time, not both.
 
-import { Picture } from "@astrojs/image/components";
+import { Picture } from "astro:assets";
 
 <Picture
   src={import("./car_xstate.png")}
