--- a/src/content/the-future-of-code-is-no-code/index.mdx
+++ b/src/content/the-future-of-code-is-no-code/index.mdx
@@ -17,7 +17,7 @@ for Github when there won't be much code left to be put in the repository.
 No code software means one can create the software he needs without any coding. There is also a low-code variant that implies a small amount of coding.
 The idea itself is amazing: everyone can create software without doing any programming.
 
-import { Picture } from "@astrojs/image/components";
+import { Picture } from "astro:assets";
 
 <Picture
   src={import("./carrd.png")}
