--- a/src/content/the-picture-tag/index.mdx
+++ b/src/content/the-picture-tag/index.mdx
@@ -51,7 +51,7 @@ In the end, the &lt;picture&gt; tag is chosen. Here is an example, in its full g
 </picture>
 ```
 
-import { Picture } from "@astrojs/image/components";
+import { Picture } from "astro:assets";
 
 <Picture
   src={import("./bobby_mockup.png")}
