--- a/src/content/the-story-of-a-rec-button/index.mdx
+++ b/src/content/the-story-of-a-rec-button/index.mdx
@@ -10,7 +10,7 @@ small project that could run on it. (Yes I know, MacBook Air, it ain't much but 
 And thus, one day, I found a beautiful Lo-fi music generator on GitHub called rather 
 unsurprising, [Lofi](https://github.com/jacbz/Lofi):
 
-import { Picture } from "@astrojs/image/components";
+import { Picture } from "astro:assets";
 
 <Picture
   src={import("./lofi.png")}
