--- a/src/content/a-short-intro-to-partytown/index.mdx
+++ b/src/content/a-short-intro-to-partytown/index.mdx
@@ -1,7 +1,7 @@
 ---
-title: "A short intro to Partytown"
-pubDate: 2022-3-31
-description: "Partytown is a solution to increase website performance by loading 3rd party JavaScript libraries in a web worker"
+title: A short intro to Partytown
+pubDate: 2022-03-31
+description: Partytown is a solution to increase website performance by loading 3rd party JavaScript libraries in a web worker
 keywords: ["JavaScript"]
 ---
 
